fix: Footer styles and props

--- a/ui/Components/Footer/index.module.scss
+++ b/ui/Components/Footer/index.module.scss
@@ -1,7 +1,6 @@
 .root {
-    position: absolute;
+    margin-top: 24px;
     padding: 25px;
-    bottom: 0;
     width: 100%;
     justify-content: center;
 }
